# sgos-phone

./: .env  .env.sops  .gitignore  .sops.yaml  CHANGELOG.md  Dockerfile  README.md  app.json  backup.sh  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_corrected_text.py  002_add_email_fields.py  002_add_summary_en.py
app/: config.py  database.py  main.py  mcp_server.py  models.py  schemas.py
app/routers/: calls.py  settings.py  sync.py  voicemails.py  webhook.py
app/services/: access_token.py  elevenlabs.py  email.py  helpdesk.py  openrouter.py  placetel.py  scheduler.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AudioPlayer.tsx  Badge.tsx  Button.tsx  Layout.tsx  VoicemailCard.tsx  VoicemailRow.tsx
frontend/src/pages/: Admin.tsx  Home.tsx  VoicemailPage.tsx
maintenance-mode/: index.html  nginx.conf
